# algorithms

./: .gitignore  CMakeLists.txt  README.md  ec_test.cpp  new_challenge_template.sh
1_brute_force/challenge_04/: readme.md
1_brute_force/challenge_06/: main.cpp
1_brute_force/challenge_07/: main.cpp
1_brute_force/challenge_08/: main.cpp  readme.md
1_brute_force/challenge_09/: main.cpp  readme.md
1_brute_force/challenge_5/: main.cpp
1_brute_force/challenge_6/: readme.md
1_brute_force/challenge_7/: main.cpp  readme.md
1_brute_force/challenge_8/: main.cpp
2_sorting/: sort.cpp  tests.sh
2_sorting/algorithms/: insertion_sort.h  merge_sort.h  selection_sort.h
3_trees/challenge_04/: main.cpp
3_trees/challenge_4/: main.cpp
3_trees/challenge_5/: readme.md
algorithms/1_brute_force/challenge_1/: readme.md
algorithms/1_brute_force/challenge_2/: main.cpp  readme.md
algorithms/1_brute_force/challenge_3/: readme.md
algorithms/1_brute_force/hackerrank/challenge_1/: main.cpp  readme.md
algorithms/1_brute_force/hackerrank/challenge_2/: readme.md
algorithms/1_brute_force/hackerrank/challenge_3/: readme.md
algorithms/1_brute_force/hackerrank/challenge_5/: readme.md
algorithms/2_sorting/algorithms/: insertion_sort.h
algorithms/3_binary_search_trees/challenge_1/: readme.md
algorithms/3_binary_search_trees/challenge_2/: main.cpp  readme.md
algorithms/3_binary_search_trees/challenge_3/: readme.md
algorithms/3_trees/challenge_1/: readme.md
algorithms/3_trees/challenge_2/: readme.md
algorithms/3_trees/challenge_3/: main.cpp  readme.md
algorithms/3_trees/challenge_4/: readme.md
algorithms/3_trees/challenge_5/: main.cpp  readme.md
algorithms/4_dynamic_programming/challenge_1/: readme.md
algorithms/4_dynamic_programming/challenge_2/: main.cpp  readme.md
algorithms/4_dynamic_programming/challenge_3/: main.cpp  readme.md
algorithms/assi_1/: q1  q1.cpp  q2  q3
algorithms/brute_force/: q2.cpp  q3.cpp
algorithms/hackerrank/1_brute_force/challenge_3/: main.cpp
algorithms/hackerrank/2_sorting/algorithms/: merge_sort.h
algorithms/hackerrank/3_trees/challenge_1/: main.cpp
algorithms/hackerrank/3_trees/challenge_2/: readme.md
algorithms/hackerrank/4_dynamic_programming/challenge_1/: main.cpp
algorithms/hackerrank/4_dynamic_programming/challenge_2/: readme.md
algorithms/lab_1/: lab1  lab1_q2  lab1_q2.cpp
algorithms/material/: (T1) Introduction + Sheet 1.pptx
algorithms/material/Lab2/: Michael Tawfeek - 1162125.docx
algorithms/material/Lab3/: words20K.txt
algorithms/sorting/: CMakeLists.txt  data.txt  sort.cpp
algorithms/sorting/algorithms/: hyprid_sort.h  insertion_sort.h  merge_sort.h  quick_sort.h  selection_sort.h
design_patterns/entity_component/: component.h  entity.h  main.cpp
design_patterns/generic_observer/: generic_observer.cpp
generic_observer/: generic_observer  generic_observer.cpp
