cmake_minimum_required(VERSION 3.19)
project(c++)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_brute_force_ch01 1_brute_force/challenge_1/main.cpp)
add_executable(1_brute_force_ch02 1_brute_force/challenge_2/main.cpp)
add_executable(1_brute_force_ch03 1_brute_force/challenge_3/main.cpp)
add_executable(1_brute_force_ch06 1_brute_force/challenge_6/main.cpp)
add_executable(1_brute_force_ch07 1_brute_force/challenge_7/main.cpp)
add_executable(1_brute_force_ch08 1_brute_force/challenge_8/main.cpp)
add_executable(2_sorting 2_sorting/sort.cpp)
add_executable(3_trees_ch01 3_trees/challenge_1/main.cpp)
add_executable(3_trees_ch02 3_trees/challenge_2/main.cpp)
add_executable(3_trees_ch03 3_trees/challenge_3/main.cpp)
add_executable(3_trees_ch04 3_trees/challenge_4/main.cpp)
add_executable(3_trees_ch05 3_trees/challenge_5/main.cpp)
add_executable(4_dynamic_programming_ch01 4_dynamic_programming/challenge_1/main.cpp)
add_executable(4_dynamic_programming_ch02 4_dynamic_programming/challenge_2/main.cpp)
add_executable(4_dynamic_programming_ch03 4_dynamic_programming/challenge_3/main.cpp)

